--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@tsconfig/svelte": "^1.0.10",
     "stylus": "^0.54.8",
     "svelte": "3.29.0",
+    "svelte-check": "^1.0.56",
     "svelte-hmr": "0.11.1",
     "svelte-preprocess": "4.3.2",
     "svite": "^0.7.2",
