--- a/package.json
+++ b/package.json
@@ -29,5 +29,10 @@
     "tslib": "^2.0.3",
     "typescript": "^4.0.3"
   },
-  "dependencies": {}
+  "dependencies": {
+    "@types/polka": "^0.5.1",
+    "@types/socket.io": "^2.1.11",
+    "polka": "^0.5.2",
+    "socket.io": "^2.3.0"
+  }
 }
