--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tailor",
+  "name": "@tailor/client",
   "version": "1.0.0",
   "description": "A sophisticated base for a rich text editor.",
   "main": "index.js",
@@ -30,9 +30,5 @@
     "typescript": "^4.0.3"
   },
   "dependencies": {
-    "@types/polka": "^0.5.1",
-    "@types/socket.io": "^2.1.11",
-    "polka": "^0.5.2",
-    "socket.io": "^2.3.0"
   }
 }
